2002-10-23  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Particular Headers): In AC_HEADER_STDBOOL,
	document _Bool.

2002-10-23  Akim Demaille  <akim@epita.fr>

	* bin/autom4te.in (handle_traces): Handle @&t@ in traces.
	Reported by Peter Eisentraut.

2002-10-23  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/headers.m4 (AC_HEADER_STDBOOL): Also look for the
	type _Bool.
	Fix a typo.
	* doc/autoconf.texi (Particular Headers): Adjust according to Paul
	Eggert's recommandations.

2002-10-22  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/headers.m4 (AC_HEADER_STDBOOL): New, based on CVS
	Bison, by Paul Eggert.
	* doc/autoconf.texi (Particular Headers): Document it.

2002-10-22  Aaron M. Ucko  <amu@alum.mit.edu>

	* lib/autoconf/general.m4 (_AC_INIT_PREPARE): Avoid duplicates in
	`$ac_configure_args'.

2002-10-22  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi: Use AC_CONFIG_HEADERS in examples.
	(AC_ST_BLKSIZE, AC_ST_RDEV): Directly point to AC_CHECK_MEMBERS.
	From Art Haas.

2002-10-22  Akim Demaille  <akim@epita.fr>

	Restore the 2002-10-11  Akim Demaille  <akim@epita.fr> patch:

	* lib/autoconf/headers.m4 (_AC_CHECK_HEADER_MONGREL)
	(AC_CHECK_HEADER, _AC_CHECK_HEADER_NEW,_AC_CHECK_HEADER_OLD): Restore.
	(_AC_CHECK_HEADER_NEW): Rename as...
	(AC_CHECK_HEADER): this.

2002-10-22  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Limitations of Usual Tools): Remove incorrect
	words about HP-UX cmp: it was actually a user-written cmp.

2002-10-22  Akim Demaille  <akim@epita.fr>

	* tests/foreign.at (Libtool): Don't check autoconf's stderr: there
	are a few warnings.
	* lib/autoconf/autoheader.m4 (AH_VERBATIM, _AH_VERBATIM_OLD):
	Quote for Perl '' strings, not "".
	* bin/autoheader.in: Invoke autoconf to get '' strings, not ""
	strings.

2002-10-22  Akim Demaille  <akim@epita.fr>

	* lib/m4sugar/m4sh.m4 (_AS_QUOTE): The warning about quoted
	characters is a syntax warning now.
	(_AS_QUOTE): Accept $2 as list of characters to quote.