@@ -23,6 +23,7 @@ verbosely report processing
 .TP
 \fB\-d\fR, \fB\-\-debug\fR
 don't remove temporary files
+.SS "Library directories:"
 .TP
 \fB\-B\fR, \fB\-\-prepend\-include\fR=\fIDIR\fR
 prepend directory DIR to search path
